# type-theory

./: LICENSE  README.md  type-theory.cabal
Notes/: EffectRows.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: package.cache  type-theory-0.1.0.0-inplace.conf
src/: Interpreter.hs
src/Domain/: Intent.hs  Units.hs  Validation.hs
src/TypeTheory/: Effects.hs
