cabal-version:      3.0

name:               type-theory
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE
author:             Jungyoon
maintainer:         46868943+Jungyoonlim@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:          warnings
  hs-source-dirs:  src
  exposed-modules:
      Domain.Units
      Domain.Validation
      Domain.Intent
      Interpreter
  build-depends:
      base ^>=4.21.0.0
  default-language: Haskell2010

executable type-theory
  import:          warnings
  main-is:         Main.hs
  hs-source-dirs:  app
  build-depends:
      base ^>=4.21.0.0,
      type-theory
  default-language: Haskell2010
